--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="./js/index.js" defer></script>
 
 </head>
-<body class="is-light">
+<body>
    <!--container00 header e nav 1 -->
    <header>
     <div class="container-fluid container-header ">
@@ -60,10 +60,6 @@
       <div class="container">
         <div class="row align-items-center ">
           <section class="section-container">
-            <label id="switchLabel">
-              <input type="checkbox" id="themeSwitch">
-              <span class="slider"></span>
-          </label>
             <h5 class="title-job">FRONT END DEVELOPER & UX / UI DESIGNER</h5>
           </section>
     </section>
