--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <div class="container">
         <div class="row align-items-center ">
           <section class="section-container">
+
             <h5 class="title-job">FRONT END DEVELOPER & UX / UI DESIGNER</h5>
           </section>
     </section>
@@ -237,7 +238,7 @@
             <!-- loading project -->
         <div class="card-2">
           <a href="https://login-screen-rho.vercel.app">
-            <h3 class="title-project text-center">Calculadora</h3>
+            <h3 class="title-project text-center">Login screen form</h3>
             <img src="./img/página login light.png" alt="" width="95%" height="70%">
           </a>
              <h3 class="title-project text-center">...</h3>
