--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <!-- metas tags -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daniela Almeida - Portfólio</title>
+  <meta name="description" content="Sou uma Designer UX/UI e Desenvolvedora Front-End com habilidades em HTML, CSS, Bootstrap, JavaScript e Figma. Atualmente, estou estudando React.js, Node.js, SQL, APIs e TypeScript, continuamente buscando aprimorar minhas habilidades e conhecimentos para oferecer soluções de alta qualidade.">
+  <meta name="keywords" content="Front-End, UI, Portfólio" />
+  <meta name="robots" content="index, follow" />
+  <!-- title -->
+  <title>Portfólio - Daniela Almeida</title>
   <link rel = "canonical" href = "https://danielaportfolio.netlify.app/.com.br" /> 
   <!--css bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> 
