meta tag alteration

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Sou uma Designer UX/UI e Desenvolvedora Front-End com habilidades em HTML, CSS, Bootstrap, JavaScript e Figma. Atualmente, estou estudando React.js, Node.js, SQL, APIs e TypeScript, continuamente buscando aprimorar minhas habilidades e conhecimentos para oferecer soluções de alta qualidade.">
   <meta name="keywords" content="Front-End, UI, Portfólio" />
   <meta name="robots" content="index, follow" />
+  <meta name="google-site-verification" content="l0n0Jpb6WNbq58f4KTnzF2ha146KBU3ZP779Gwd3ly8" />
   <!-- title -->
   <title>Portfólio - Daniela Almeida</title>
   <link rel = "canonical" href = "https://danielaportfolio.netlify.app/.com.br" /> 
