--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
             <h5 class="title-job">FRONT END DEVELOPER & UX / UI DESIGNER</h5>
           </section>
     </section>
-      </div>
+      </diV>
       </div>
     </div>
+
+  
 
     <!--container03 sobre  -->
     <section id="sobre">
@@ -80,7 +82,7 @@
       <div class="texts">
       <h5 class="text-about">Sou Daniela Almeida, Front end developer e ux e ui designer</h5>
       <p class="subtext-about">Sou uma ux e ui designer e desenvolvedora front end, tenho conhecimento em <mark>html, css, bootstrap,JavaScript e Figma. Estudando React.js, Node.js, Sql, API, TypeScript</mark>e sempre estou me aprimorando e estudando para melhorar cada vez mais no que faço!</p></div>
-      <img class="img-note" src="./img/laptop dev.png" alt="">
+      <img class="img-note" src="./img" alt="">
       <div class="social-buttons">
         <a href="https://github.com/Daniela-almeida" class="social-button github">
           <svg class="cf-icon-svg" xmlns="http://www.w3.org/2000/svg" viewBox="-2.5 0 19 19"><path d="M9.464 17.178a4.506 4.506 0 0 1-2.013.317 4.29 4.29 0 0 1-2.007-.317.746.746 0 0 1-.277-.587c0-.22-.008-.798-.012-1.567-2.564.557-3.105-1.236-3.105-1.236a2.44 2.44 0 0 0-1.024-1.348c-.836-.572.063-.56.063-.56a1.937 1.937 0 0 1 1.412.95 1.962 1.962 0 0 0 2.682.765 1.971 1.971 0 0 1 .586-1.233c-2.046-.232-4.198-1.023-4.198-4.554a3.566 3.566 0 0 1 .948-2.474 3.313 3.313 0 0 1 .091-2.438s.773-.248 2.534.945a8.727 8.727 0 0 1 4.615 0c1.76-1.193 2.532-.945 2.532-.945a3.31 3.31 0 0 1 .092 2.438 3.562 3.562 0 0 1 .947 2.474c0 3.54-2.155 4.32-4.208 4.548a2.195 2.195 0 0 1 .625 1.706c0 1.232-.011 2.227-.011 2.529a.694.694 0 0 1-.272.587z"></path></svg>
@@ -125,49 +127,49 @@
 
                 <div class="skill-name">HTML</div>
                 <div class="skill-level">
-                  <div class="skill-percent" style="width: 95%"></div>
+                  <div class="skill-percent" style="width: 100%"></div>
                 </div>
-                <div class="skill-percent-number">95%</div>
+                <div class="skill-percent-number">100%</div>
                 </div>
 
               <div class="skills">
                 <div class="skill-name">CSS</div>
                 <div class="skill-level">
-                  <div class="skill-percent" style="width: 95%"></div>
+                  <div class="skill-percent" style="width: 100%"></div>
                 </div>
-                <div class="skill-percent-number">95%</div>
+                <div class="skill-percent-number">100%</div>
               </div>
 
               <div class="skills">
                 <div class="skill-name">JavaScript</div>
                 <div class="skill-level">
-                  <div class="skill-percent" style="width: 40%"></div>
+                  <div class="skill-percent" style="width: 50%"></div>
                 </div>
-                <div class="skill-percent-number">40%</div>
+                <div class="skill-percent-number">50%</div>
               </div>
 
               <div class="skills">
                 <div class="skill-name">React.js</div>
                 <div class="skill-level">
-                  <div class="skill-percent" style="width: 20%"></div>
+                  <div class="skill-percent" style="width: 45%"></div>
                 </div>
-                <div class="skill-percent-number">20%</div>
+                <div class="skill-percent-number">45%</div>
               </div>
 
               <div class="skills">
                 <div class="skill-name">Boostrap</div>
                 <div class="skill-level">
-                  <div class="skill-percent" style="width: 70%"></div>
+                  <div class="skill-percent" style="width: 100%"></div>
                 </div>
-                <div class="skill-percent-number">70%</div>
+                <div class="skill-percent-number">100%</div>
               </div>
 
               <div class="skills">
                 <div class="skill-name">Figma</div>
                 <div class="skill-level">
-                  <div class="skill-percent" style="width: 70%"></div>
+                  <div class="skill-percent" style="width: 80%"></div>
                 </div>
-                <div class="skill-percent-number">70%</div>
+                <div class="skill-percent-number">80%</div>
               </div>
             </div>
           </div>
@@ -247,7 +249,7 @@
             <h3 class="title-project text-center">Login screen form</h3>
             <img src="./img/página login light.png" alt="" width="95%" height="70%">
           </a>
-             <h3 class="title-project text-center">...</h3>
+          
               
         </div>
             <!-- loading project -->
@@ -273,7 +275,7 @@
     <div class=" container-fluid container06">
       <footer class=" container-fluid footer text-center">
         <div class=" container-fluid contact">
-        <p class="direitos"> &copy; Powered by Daniela Almeida - 2023</p>
+        <p class="direitos"> Copyright &copy; 2024. Todos os direitos reservados.</p>
       </div>
       </div>
     </footer>
